--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 </head>
 
 <body>
-    <div>
+    <div class="content">
         <div>
             <input type="button" value="ZoomIn/ ZooOut">
         </div>
-        <div>
-            <img src="./imag/image_five.jpg" alt="" width="500px" height="200px">
-            <img src="./imag/image_two.jpg" alt="" width="500px" height="200px">
-            <img src="./imag/three.jpeg" alt="" width="500px" height="200px">
-            <img src="./imag/image_four.jpg" alt="" width="500px" height="200px">
+        <div class="img">
+            <img src="./imag/image_five.jpg" alt="" width="300px" height="200px">
+            <img src="./imag/image_two.jpg" alt="" width="300px" height="200px">
+            <img src="./imag/three.jpeg" alt="" width="300px" height="200px">
+            <img src="./imag/image_four.jpg" alt="" width="300px" height="200px">
 
         </div>
 
