--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
 <body>
     <div class="content">
-        <div>
-            <input type="button" value="ZoomIn/ ZooOut">
+        <div class="input">
+            <input type="button" value="ZoomIn/ ZooOut" onclick="zom()" class="input__inp" size="10px">
         </div>
-        <div class="img">
+        <div class="img" onclick="go()">
             <img src="./imag/image_five.jpg" alt="" width="300px" height="200px">
             <img src="./imag/image_two.jpg" alt="" width="300px" height="200px">
             <img src="./imag/three.jpeg" alt="" width="300px" height="200px">
