--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="input">
             <input type="button" value="ZoomIn/ ZooOut" onclick="zom()" class="input__inp" size="10px">
         </div>
-        <div class="img" onclick="go()">
+        <div class="img" onmouseover="on()" onmouseout="of()">
             <img src="./imag/image_five.jpg" alt="" width="300px" height="200px">
             <img src="./imag/image_two.jpg" alt="" width="300px" height="200px">
             <img src="./imag/three.jpeg" alt="" width="300px" height="200px">
