--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
             <input type="button" value="ZoomIn/ ZooOut" onclick="zom()" class="input__inp" size="10px">
         </div>
         <div class="img" onmouseover="on()" onmouseout="of()">
-            <img src="./imag/image_five.jpg" alt="" width="300px" height="200px">
-            <img src="./imag/image_two.jpg" alt="" width="300px" height="200px">
-            <img src="./imag/three.jpeg" alt="" width="300px" height="200px">
-            <img src="./imag/image_four.jpg" alt="" width="300px" height="200px">
+            <img src="./imag/cat_one.jpg" alt="" width="300px" height="200px">
+            <img src="./imag/cat_three.jfif" alt="" width="300px" height="200px">
+            <img src="./imag/cat_four.jpg" alt="" width="300px" height="200px">
+            <img src="./imag/cat_five.jfif" alt="" width="300px" height="200px">
 
         </div>
 
